Apply some enhancements